3-ubuntu-secret.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ubuntu
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ubuntu
  template:
    metadata:
      labels:
        app: ubuntu
    spec:
      containers:
      - name: ubuntu
        image: ubuntu
        command: ["/bin/sleep","infinity"]
        volumeMounts:
          - name: config-volume
            mountPath: /etc/config
      volumes:
        - name: config-volume
          secret:
            secretName: ubuntu-secret
---

#kubectl create secret generic ubuntu-secret --from-literal=SC_admin-password="cGFzc3dvcmQ=" --from-literal=SC_management-password="c2VjcmV0a2V5" --from-literal=SC_database-password="cGFzc2tleQ=="
