6-ubuntu-pv-pvc-dynamic.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ubuntu
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ubuntu
  template:
    metadata:
      labels:
        app: ubuntu
    spec:
      containers:
      - name: ubuntu
        image: ubuntu
        command: ["/bin/sleep","infinity"]
        volumeMounts:
        - name: data
          mountPath: /etc/config
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: ubuntu-pvc
