1-ubuntu-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-default
spec:
  ports:
  - name: tcp
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
  type: ClusterIP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: curl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: curl
  template:
    metadata:
      labels:
        app: curl
    spec:
      containers:
      - name: curl-default-1
        image: devorbitus/ubuntu-bash-jq-curl
        command: ["/bin/sleep","infinity"]

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx

---

#apiVersion: v1
#kind: Namespace
#metadata:
#  name: production

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-production
  namespace: production
spec:
  ports:
  - name: tcp
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
  type: ClusterIP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-production
  namespace: production
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
