8-ingress-istio.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: httpbin-default
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: httpbin

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin-default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin
  template:
    metadata:
      labels:
        app: httpbin
    spec:
      containers:
      - image: docker.io/kennethreitz/httpbin
        imagePullPolicy: IfNotPresent
        name: httpbin
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: httpbin-production
  namespace: production
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: httpbin

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin-production
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin
  template:
    metadata:
      labels:
        app: httpbin
    spec:
      containers:
      - image: docker.io/kennethreitz/httpbin
        imagePullPolicy: IfNotPresent
        name: httpbin
        ports:
        - containerPort: 80

---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: httpbin-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin-default
spec:
  hosts:
  - "*"
  gateways:
  - httpbin-gateway
  http:
  - match:
    - uri:
        exact: /headers
    - uri:
        exact: /get
    route:
    - destination:
        port:
          number: 80
        host: httpbin-default.default.svc.cluster.local

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin-production
spec:
  hosts:
  - "*"
  gateways:
  - httpbin-gateway
  http:
  - match:
    - uri:
        exact: /ip
    - uri:
        exact: /anything
    route:
    - destination:
        port:
          number: 80
        host: httpbin-production.production.svc.cluster.local
